little TOC right align fix for new dokuwiki versions

--- a/style.css
+++ b/style.css
@@ -353,7 +353,7 @@ div.dokuwiki code {
 
 /* ---------- table of contents ------------------- */
 
-div.dokuwiki div.toc {
+div.dokuwiki #dw__toc {
   margin: 1.2em 0 0 2em;
   float: right;
   width: 200px;
